# Hydrate-DG

./: .gitignore  CITATION.cff  CMakeLists.txt  Hydrate-DG.pc.in  README  config.h.cmake  dune.module  proj-Hydrate-DG-2comp.pc.in  proj-HydrateDG-Ex1.pc.in  proj-HydrateDG.pc.in
dune/Hydrate-DG/BM_phasechange_0d/: CMakeLists.txt  boundary_conditions.hh  characteristic_values.hh  driver.hh  driver_Sh.hh  include_problem.hh  initial_conditions.hh  parameters.hh
dune/Hydrate-DG/BM_phasechange_0d/grids/: CMakeLists.txt  grid.hh
dune/Hydrate-DG/BM_phasechange_0d/inputs/: sample.ini
dune/Hydrate-DG/BM_phasechange_0d/properties/: CH4.hh  CMakeLists.txt  H2O.hh  eosCH4.hh  hydrate.hh  hydrate_phase_change.hh  hydraulic_properties.hh  include_properties.hh  mixture.hh  salt.hh  soil.hh
dune/Hydrate-DG/Ex1/: CMakeLists.txt  boundary_conditions.hh  characteristic_values.hh  driver.hh  include_problem.hh  initial_conditions.hh  parameters.hh
dune/Hydrate-DG/Ex1/grids/: CMakeLists.txt  grid.hh  grid2.hh  gridinclined.msh
dune/Hydrate-DG/Ex1/inputs/: sample -q2-q3-q4.ini  sample copy.ini  sample.ini  sample2.ini
dune/Hydrate-DG/Ex1/properties/: CH4.hh  CMakeLists.txt  H2O.hh  eosCH4.hh  hydrate.hh  hydrate_phase_change.hh  hydraulic_properties.hh  include_properties.hh  mixture.hh  salt.hh  soil.hh
dune/Hydrate-DG/Ex2/: CMakeLists.txt  boundary_conditions.hh  boundary_conditions_new .hh  characteristic_values.hh  driver.hh  driver_Sh.hh  include_problem.hh  initial_conditions.hh  parameters.hh
dune/Hydrate-DG/Ex2/grids/: 1d  CMakeLists.txt  grid.hh  grid2fracture.msh  grid2fracture1.msh  grid2fracture2.msh  grid2fracture3.msh  grid2fracture4.msh  grid2fracture5.msh  gridfracture.msh  gridfracture1.msh  gridfracture2.msh
dune/Hydrate-DG/Ex2/inputs/: sample.ini
dune/Hydrate-DG/Ex2/properties/: CH4.hh  CMakeLists.txt  H2O.hh  eosCH4.hh  hydrate.hh  hydrate_phase_change.hh  hydraulic_properties.hh  include_properties.hh  mixture.hh  salt.hh  soil.hh
dune/Hydrate-DG/FGP/: CMakeLists.txt  boundary_conditions.hh  characteristic_values.hh  driver.hh  include_problem.hh  initial_conditions.hh  parameters.hh
dune/Hydrate-DG/FGP/grids/: CMakeLists.txt  grid.hh
dune/Hydrate-DG/FGP/inputs/: sample.ini
dune/Hydrate-DG/FGP/properties/: CH4.hh  CMakeLists.txt  H2O.hh  eosCH4.hh  hydrate_phase_change.hh  hydraulic_properties.hh  include_properties.hh  mixture.hh  soil.hh
dune/Hydrate-DG/akerbp2D_pockmark/: CMakeLists.txt  boundary_conditions.hh  characteristic_values.hh  driver.hh  include_problem.hh  initial_conditions.hh  parameters.hh
dune/Hydrate-DG/akerbp2D_pockmark/grids/: CMakeLists.txt  grid.hh
dune/Hydrate-DG/akerbp2D_pockmark/inputs/: CMakeLists.txt  sample.ini
dune/Hydrate-DG/akerbp2D_pockmark/outputs/: CMakeLists.txt  Hydrate_methane_-00000.vtu
dune/Hydrate-DG/akerbp2D_pockmark/properties/: CH4.hh  CMakeLists.txt  H2O.hh  eosCH4.hh  hydrate.hh  hydrate_phase_change.hh  hydraulic_properties.hh  include_properties.hh  mixture.hh  salt.hh  soil.hh
dune/Hydrate-DG/operators/: CMakeLists.txt  Initial.hh  LocalOperator.hh  LocalOperatorLinear.hh  LocalOperator_2comps.hh  LocalOperator_Sh1.hh  LocalOperator_T1.hh  LocalOperator_XC1.hh  TimeOperator.hh  TimeOperatorLinear.hh  TimeOperator_2comps.hh  TimeOperator_Sh1.hh  TimeOperator_T1.hh  TimeOperator_XC1.hh  indices.hh  operator_l2projection.hh  phase_velocity.hh  postprocess.hh
dune/proj-Hydrate-DG-2comp/: CMakeLists.txt  FLOW_LocalOperator.hh  FLOW_TimeOperator.hh  IncludeClasses.hh  IncludesDUNE.hh  IncludesProblem.hh  Initial.hh  log.txt  proj_Hydrate_SimplexDG.hh
dune/proj-Hydrate-DG-2comp/Geo/: CMakeLists.txt  cylinder_1.msh
dune/proj-Hydrate-DG-2comp/parameters/: CMakeLists.txt  characteristicValues.hh  hydraulicProperties.hh  indices.hh  methane.hh  mixture.hh  parameters.hh  reactionKinetics.hh  soil.hh  water.hh
dune/proj-Hydrate-DG-2comp/problemSpecs/: CMakeLists.txt  includeProblemSpecifications.hh  problem_20160922_test1.hh
dune/proj-HydrateDG-Ex1/hydrate-DG-old/: CMakeLists.txt  driver.hh
dune/proj-HydrateDG-Ex1/hydrate-DG-old/grids/: CMakeLists.txt  grid.hh
dune/proj-HydrateDG-Ex1/hydrate-DG-old/inputs/: CMakeLists.txt  sample.ini
dune/proj-HydrateDG-Ex1/hydrate-DG-old/outputs/: test_-00005.vtu  test_-00012.vtu  test_-00013.vtu  test_-00025.vtu  test_-00029.vtu  test_-00030.vtu
dune/proj-HydrateDG-Ex1/hydrate-DG-old/parameters/: CMakeLists.txt
dune/proj-HydrateDG-Ex1/hydrate-DG-old/problemSpecs/: CMakeLists.txt  problem_20160922_test1.hh
dune/proj-HydrateDG/hydrate-DG-Ex1/: CMakeLists.txt  IncludeProperties.hh  IncludesProblem.hh  boundary_conditions.hh  characteristicValues.hh  driver.hh  indices.hh  initial_conditions.hh  log.txt  parameters.hh
dune/proj-HydrateDG/hydrate-DG-Ex1/Geo/: CMakeLists.txt
dune/proj-HydrateDG/hydrate-DG-Ex1/grids/: CMakeLists.txt  grid.hh
dune/proj-HydrateDG/hydrate-DG-Ex1/inputs/: CMakeLists.txt  sample.ini
dune/proj-HydrateDG/hydrate-DG-Ex1/outputs/: Hydrate_methane_-00000.vtu  test_-00000.vtu  test_-00001.vtu  test_-00002.vtu  test_-00003.vtu  test_-00006.vtu  test_-00011.vtu  test_-00021.vtu  test_-00031.vtu
dune/proj-HydrateDG/hydrate-DG-Ex1/properties/: CMakeLists.txt  IncludeProperties.hh  eosPengRobinson.hh  hydrate.hh  hydraulicProperties.hh  methane.hh  mixture.hh  parameters.hh  reactionKinetics.hh  soil.hh  water.hh
dune/proj-HydrateDG/hydrate-DG-old/: CMakeLists.txt  IncludesProblem.hh  proj_Hydrate_SimplexDG.hh
dune/proj-HydrateDG/hydrate-DG-old/grids/: CMakeLists.txt
dune/proj-HydrateDG/hydrate-DG-old/inputs/: CMakeLists.txt  sample.ini
dune/proj-HydrateDG/hydrate-DG-old/outputs/: test_-00000.vtu  test_-00001.vtu  test_-00002.vtu  test_-00004.vtu  test_-00007.vtu  test_-00008.vtu  test_-00009.vtu  test_-00010.vtu  test_-00014.vtu  test_-00015.vtu  test_-00016.vtu  test_-00017.vtu  test_-00018.vtu  test_-00019.vtu  test_-00020.vtu  test_-00022.vtu  test_-00023.vtu  test_-00024.vtu  test_-00026.vtu  test_-00027.vtu  (+5 more)
dune/proj-HydrateDG/operators/: CMakeLists.txt  Initial.hh  LocalOperator.hh  TimeOperator.hh  indices.hh
(+28778 files in other folders)
