#install headers
install(FILES proj-Hydrate-SimplexDG.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-Hydrate-DG-2comp)
install(FILES FLOW_LocalOperator.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-Hydrate-DG-2comp)
install(FILES FLOW_TimeOperator.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-Hydrate-DG-2comp)
install(FILES IncludeClasses.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-Hydrate-DG-2comp)
install(FILES IncludesDUNE.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-Hydrate-DG-2comp)
install(FILES IncludesProblem.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-Hydrate-DG-2comp)
install(FILES Initial.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-Hydrate-DG-2comp)
add_subdirectory("Geo")
add_subdirectory("parameters")
add_subdirectory("problemSpecs")
