#install headers
install(FILES driver.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-HydrateDG-Ex1/hydrate-DG-old)
install(FILES IncludeClasses.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-HydrateDG-Ex1/hydrate-DG-old)
install(FILES IncludesProblem.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-HydrateDG-Ex1/hydrate-DG-old)
add_subdirectory("Geo")
add_subdirectory("parameters")
add_subdirectory("problemSpecs")
add_subdirectory("grids")
add_subdirectory("inputs")
add_subdirectory("outputs")